fix: wrapper horizontal overflow

--- a/src/styles/_container.scss
+++ b/src/styles/_container.scss
@@ -13,7 +13,7 @@
  */
 
 .wrapper {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
